# streamforge

./: .gitignore  ArchDecisions.md  FirstDemo.txt  GCP_48HR_GUIDE.md  HN_POST.md  README.md  REPORT.md  commercial.md  config.yaml  demo.sh  generate_events.py  pyproject.toml  quickstart.sh  streamforge_ui.py
.github/workflows/: ci.yml  schema-guard.yml  schema-sync.yml
archive/: CLAUDE.md  README.md
archive/demo_legacy/: demo.sh
archive/kafka_demo_legacy/: feed_kafka.py
cockpit/: package-lock.json  package.json  tailwind.config.js
cockpit/src/: App.tsx  index.css
config/: default.yaml  dev.yaml  prod.yaml  staging.yaml
config/topics/: bookings.stream.yaml  events.all.yaml  events.bookings.yaml  events.flights.yaml  events.github.yaml  events.iot.yaml  events.payments.yaml  events.wikipedia.yaml  flights.stream.yaml  iot.stream.yaml  stream_v1.yaml
demo/: .env.template  README.md  RUNBOOK.md  cleanup.sh  cto_demo.sh  demo.sh  docker-compose.yml  feed_all.py  inject_drift.py  offline_demo.sh  reset.sh  seed_access_graph.py  setup.sh  start.sh
deploy/: gcp.sh  two-vm.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_LOG.md  KAFKA_DEPLOYMENT.md  PRODUCT_OVERVIEW.md
docs/reference/: PITCH.md  PRODUCTION_READINESS.md  README.md  SLIDE_DECK.md  SYSTEM_ARCHITECTURE.md
eval/benchmarks/: bookings.yaml  payments.yaml
kafka_docker_demo/: docker-compose.yml  kafka_watch_all.sh
mainSite/: INTEGRATION.md  project-card.html  streamforge-brief.html  streamforge.html
schemas/bookings.stream/: consumers.yaml  inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/events.all/: inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/events.bookings/: consumers.yaml  inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/events.flights/: inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/events.github/: inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/events.iot/: consumers.yaml  inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/events.payments/: consumers.yaml  events_payments.ksql  events_payments.proto  events_payments.sql  inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/events.wiki/: inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/events.wikipedia/: inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/flights.stream/: consumers.yaml  inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/iot.stream/: inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/live/: consumers.yaml  inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
schemas/stream_v1/: consumers.yaml  drift_state.yaml  inference_report.md  profile.yaml  profile_report.md  schema.yaml  stream_policy.yaml
scripts/: watch_all.sh
scripts/taps/: README.md
streamforge/: __init__.py  __main__.py  access_observer.py  audit.py  confidence.py  config.py  consumer_registry.py  dependency_graph.py  discriminator.py  distribution.py  dlq.py  drift_detector.py  fdr.py  field_registry.py  generator.py  history.py  inference.py  logging_config.py  metrics.py  metrics_server.py  models.py  multi_schema_audit.py  multi_schema_confidence.py  output_formatter.py  pii_detector.py  policy.py  profiler.py  report_writer.py  resilience.py  roi.py  sampler.py  schema_cache.py  schema_hints.yaml  schema_writer.py  statistical_tests.py  stratified_sampler.py  supervisor.py  topic_config.py  ui.py  watch_state.py
streamforge-action/: Dockerfile  MARKETPLACE.md  README.md  action.yml  entrypoint.sh  test_action.sh
streamforge/api/: __init__.py  main.py  store.py
streamforge/cli/: __init__.py  _helpers.py  eval_cmd.py  history_cmd.py  init_cmd.py  ops_cmd.py  schema_cmd.py  watch_cmd.py
streamforge/connectors/: __init__.py  base.py  factory.py  file.py  generators.py  kafka.py  mock.py  protocol.py
streamforge/detector/: __init__.py  classify.py  core.py  phase.py  routing.py  sketch.py  trending.py  watch.py  webhook.py  window.py
streamforge/eval/: __init__.py  benchmark.py  calibration.py  inject.py  metrics.py  runner.py  types.py
streamforge/exporters/: avro.py  flink_ddl.py  json_schema.py  ksqldb.py  markdown.py  protobuf.py
streamforge/history/: __init__.py  diff.py  proposals.py  snapshot.py  velocity.py
streamforge/notifications/: slack.py
streamforge/registries/: __init__.py  apicurio.py  base.py  confluent.py  glue.py
streamforge/sidecar/: __init__.py  factory.py  ibmmq.py  manager.py  models.py  protocol.py  sqs.py  telemetry.py
streamforge/ui/: __init__.py  components.py  data.py  styling.py
streamforge/vcs/: __init__.py  base.py  git_backend.py  github.py  gitlab.py
taps/: README.md  coinbase.py  opensky.py  wikipedia.py
tests/: test_access_observer.py  test_audit_compliance.py  test_audit_coverage.py  test_bug_fixes.py  test_cluster_windows.py  test_concurrency_edge_cases.py  test_consumer_autodiscovery.py  test_consumer_features.py  test_demo_command.py  test_dependency_graph.py  test_discover.py  test_drift_detector.py  test_drift_evidence.py  test_drift_report_json.py  test_e2e_cli.py  test_e2e_lifecycle.py  test_error_paths.py  test_exporter_flink_ddl.py  test_exporter_ksqldb.py  test_exporter_protobuf.py  test_failure_counters.py  test_fdr.py  test_field_registry.py  test_final_technical_fixes.py  test_fix_guidance.py  test_generator.py  test_graph_from_schemas.py  test_health_endpoints.py  test_history.py  test_ibmmq_pool.py  test_ibmmq_sidecar.py  test_incident_report.py  test_inference_cascade.py  test_init_quality.py  test_kafka_ping.py  test_kafka_resilience.py  test_limits_and_safety.py  test_logging_rotation.py  test_metrics_export.py  test_multi_schema.py  (+46 more)
(+103 files in other folders)
