[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamforge-cli"
version = "0.1.0"
description = "AI-native schema inference and drift detection for event streams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.9.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "httpx-sse>=0.4.0",
    "websockets>=12.0",
]

[project.scripts]
streamforge = "streamforge.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["streamforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
