[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamforge-cli"
version = "0.1.0"
description = "AI-native schema inference and drift detection for event streams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ── LLM / API ──────────────────────────────────────────────────────────────
    "openai>=1.30.0",           # OpenAI-compatible SDK (works with Groq, Ollama, OpenAI)

    # ── Data validation ───────────────────────────────────────────────────────
    "pydantic>=2.0.0",          # All internal data models

    # ── CLI ───────────────────────────────────────────────────────────────────
    "typer>=0.12.0",            # CLI framework with automatic --help
    "rich>=13.0.0",             # Terminal formatting (tables, panels, colours)

    # ── Config / serialisation ────────────────────────────────────────────────
    "pyyaml>=6.0",              # YAML schema files
    "python-dateutil>=2.9.0",   # Date parsing in drift detection

    # ── HTTP / networking ─────────────────────────────────────────────────────
    "httpx>=0.27.0",            # Webhooks (Slack, PagerDuty) and live taps
    "httpx-sse>=0.4.0",         # Server-Sent Events (Wikipedia live tap)
    "websockets>=12.0",         # WebSocket client (Coinbase live tap)

    # ── File watching ─────────────────────────────────────────────────────────
    "watchdog>=4.0.0",          # File-system events for smarter watch mode

    # ── Dashboard ─────────────────────────────────────────────────────────────
    "streamlit>=1.35.0",        # Dashboard UI

    # ── Kafka (optional — install manually for Kafka support) ─────────────────
    # kafka-python is pure Python (no native deps). Prefer for development.
    # For production, replace with: confluent-kafka>=2.3.0 (requires librdkafka)
    # Uncomment the line below to enable Kafka connector:
    # "kafka-python>=2.0.0",
]

[project.optional-dependencies]
# Install with: pip install streamforge-cli[kafka]
kafka = ["kafka-python>=2.0.0"]

# Install with: pip install streamforge-cli[kafka-confluent]
# Requires librdkafka to be installed on the system.
kafka-confluent = ["confluent-kafka>=2.3.0"]

# Install with: pip install streamforge-cli[dev]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",              # Linter + formatter
    "mypy>=1.10.0",             # Type checker
]

[project.scripts]
streamforge = "streamforge.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["streamforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
