[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamforge-cli"
version = "0.1.0"
description = "AI-native schema inference and drift detection for event streams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ── LLM / API ──────────────────────────────────────────────────────────────
    "openai>=1.30.0",           # OpenAI-compatible SDK (works with Groq, Ollama, OpenAI)

    # ── Data validation ───────────────────────────────────────────────────────
    "pydantic>=2.0.0",          # All internal data models

    # ── CLI ───────────────────────────────────────────────────────────────────
    "typer>=0.12.0",            # CLI framework with automatic --help
    "rich>=13.0.0",             # Terminal formatting (tables, panels, colours)

    # ── Config / serialisation ────────────────────────────────────────────────
    "pyyaml>=6.0",              # YAML schema files
    "python-dateutil>=2.9.0",   # Date parsing in drift detection

    # ── HTTP / networking ─────────────────────────────────────────────────────
    "httpx>=0.27.0",            # Webhooks (Slack, PagerDuty) and live taps
    "httpx-sse>=0.4.0",         # Server-Sent Events (Wikipedia live tap)
    "websockets>=12.0",         # WebSocket client (Coinbase live tap)

    # ── File watching ─────────────────────────────────────────────────────────
    "watchdog>=4.0.0",          # File-system events for smarter watch mode

    # ── Dashboard API (the React cockpit is served separately under cockpit/) ──
    "fastapi>=0.110.0",         # Cockpit dashboard API
    "uvicorn>=0.29.0",          # ASGI server for the cockpit API

    # ── Kafka (optional — install manually for Kafka support) ─────────────────
    # kafka-python is pure Python (no native deps). Prefer for development.
    # For production, replace with: confluent-kafka>=2.3.0 (requires librdkafka)
    # Uncomment the line below to enable Kafka connector:
    # "kafka-python>=2.0.0",
]

[project.optional-dependencies]
# Install with: pip install streamforge-cli[kafka]
kafka = ["kafka-python>=2.0.0"]

# Install with: pip install streamforge-cli[kafka-confluent]
# Requires librdkafka to be installed on the system.
kafka-confluent = ["confluent-kafka>=2.3.0"]

# Install with: pip install streamforge-cli[dev]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",        # Coverage reporting
    "ruff>=0.4.0",              # Linter + formatter
    "mypy>=1.10.0",             # Type checker
]

# Install with: pip install streamforge-cli[integration]
# Requires Docker for running testcontainers
integration = [
    "testcontainers>=4.0.0",    # Docker-based testing
    "boto3>=1.34.0",            # AWS SDK for LocalStack tests
]

# Install with: pip install streamforge-cli[resilience]
# Production resilience features
resilience = [
    "pybreaker>=1.0.0",         # Circuit breaker pattern
    "aioboto3>=13.0.0",         # Async AWS SDK
]

# Install with: pip install streamforge-cli[sqs]
# SQS sidecar support
sqs = [
    "boto3>=1.34.0",            # Sync AWS SDK
]

# Install with: pip install streamforge-cli[sqs-async]
# Async SQS sidecar (recommended for production)
sqs-async = [
    "aioboto3>=13.0.0",         # Async AWS SDK
]

[project.scripts]
streamforge = "streamforge.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["streamforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line-length — handled by formatter
    "B008",  # do not perform function calls in default arguments (Typer pattern)
    "B904",  # raise-without-from-inside-except — CLI error paths intentionally don't chain
    "SIM108", # ternary operator — sometimes less readable
]

[tool.ruff.lint.per-file-ignores]
# CLI package imports command modules after `app` is created and the logging
# bootstrap has run, then registers them — an intentional inline-registration
# pattern, so module-level imports cannot all sit at the top of the file.
"streamforge/cli/__init__.py" = ["E402"]
# Phase is a (str, Enum) for stable string serialization in schema/report output.
# Switching to StrEnum would risk changing that serialization behavior.
"streamforge/detector/phase.py" = ["UP042"]

[tool.ruff.lint.isort]
known-first-party = ["streamforge"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["streamforge/"]
